k8s/02_web-interface/02_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: web-interface
  annotations:
    konghq.com/plugins: request-id
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
